# UoP_Assistant

./: .gitignore  agent_orchestrator.py  app.py  config.py  pyproject.toml  rag_engine.py  requirements.txt  test_uop.py  together_api.py
agents/: admission_agent.py  base_agent.py  conversation_agent.py  integrator_agent.py
config/: prompts.py  settings.py
knowledge/: user_preference.txt
rag/: retriever.py
src/multi_agent/: Frontend.py  __init__.py  cache_manager.py  crew.py  debug_metrics.py  embeddings_singleton.py  main.py
src/multi_agent/config/: agents.yaml  tasks.yaml
src/multi_agent/data/: response_cache.json
src/multi_agent/faiss_index/: index.faiss
src/multi_agent/scratch/: debug_sim.py  debug_sim_v2.py  test_cache.py  test_collaboration.py  test_llm.py  test_production.py  test_router.py  test_router_v2.py
src/multi_agent/tools/: __init__.py  custom_tool.py  dep_utils.py  department_tools.py  rag_indexer.py  rag_tool.py  student_tool.py  utils.py  visualization.py  visualization_tool.py
src/multi_agent/tools/faiss_index/: index.pkl
tools/: scraper_tools.py
university-rag-crew/: agents.py  app.py  main.py  rag_agent.py  scraper_agent.py  tasks.py  tools.py
utils/: logger.py
