[project]
name = "multi_agent"
version = "0.1.0"
description = "Multi-Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.1",
    "pydantic>=2.11.10",
]

[project.scripts]
multi_agent = "multi_agent.main:run"
run_crew = "multi_agent.main:run"
train = "multi_agent.main:train"
replay = "multi_agent.main:replay"
test = "multi_agent.main:test"
run_with_trigger = "multi_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
